# ComplaintManagementSystem

./: .gitignore  README.md  pyproject.toml
complaint_management/: apps.py  forms.py  models.py  urls.py
complaint_management/migrations/: 0001_initial.py  0002_delete_complaints.py
complaint_management/static/css/: styles.css
complaint_management/static/js/: location_picker.js
complaint_management/templates/: base.html  login.html
complaint_management/templates/admin/: complaint_form.html  complaint_list.html  customer_form.html  customer_list.html  dashboard.html  employee_form.html  employee_list.html  product_form.html  product_list.html
complaint_management/templates/employee/: assigned_complaints.html  dashboard.html  unassigned_complaints.html  update_complaint.html
complaint_management/views/: admin_views.py  auth_views.py  employee_views.py
complaint_management_system/: settings.py  urls.py
