[project]
name = "complaint-management-system"
version = "0.1.0"
description = "For managing complaints"
authors = [
    {name = "Muhammed Sadhath V H"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (==5.2.4)",
    "djangorestframework (==3.16.0)",
    "djangorestframework-simplejwt (==5.5.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
